// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SideItem render as aliased dependency 1`] = `

<div>
  <div class="group/side-item relative">
    <gui-context-menu>
      <gui-context-menu-trigger classname="relative w-full">
        <gui-card
          role="article"
          classname="group bg-background relative z-10 flex cursor-pointer flex-col rounded-lg shadow-none transition-colors hover:border hover:bg-neutral-100 hover:dark:bg-neutral-900"
        >
          <gui-card-header classname="relative flex w-full flex-row items-baseline gap-3 p-1 pr-2">
            <div class="flex items-center gap-2">
              <gui-data-badge
                variant="mono"
                classnames="[object Object]"
                content="npm:item@^1.0.0"
              >
              </gui-data-badge>
            </div>
            <gui-tooltip-provider>
              <gui-tooltip delayduration="150">
                <gui-tooltip-trigger classname="w-full cursor-pointer items-baseline justify-between truncate overflow-hidden text-left text-sm font-medium">
                  aliased-item
                </gui-tooltip-trigger>
                <gui-tooltip-portal>
                  <gui-tooltip-content align="start">
                    aliased-item
                  </gui-tooltip-content>
                </gui-tooltip-portal>
              </gui-tooltip>
            </gui-tooltip-provider>
            <gui-tooltip-provider>
              <gui-tooltip delayduration="150">
                <gui-tooltip-trigger classname="font-courier text-muted-foreground w-full max-w-14 cursor-pointer truncate overflow-hidden text-right text-sm font-normal">
                  v1.0.0
                </gui-tooltip-trigger>
                <gui-tooltip-portal>
                  <gui-tooltip-content align="start">
                    v1.0.0
                  </gui-tooltip-content>
                </gui-tooltip-portal>
              </gui-tooltip>
            </gui-tooltip-provider>
            <div class="absolute inset-x-0 -bottom-3 px-2.5">
              <div class="relative flex w-full items-center justify-end">
                <div class="flex flex-wrap items-center gap-1">
                  <gui-relation-badge relation="prod">
                    prod
                  </gui-relation-badge>
                </div>
              </div>
            </div>
          </gui-card-header>
        </gui-card>
      </gui-context-menu-trigger>
      <gui-context-menu-content>
        <gui-context-menu-item disabled="true">
          <gui-package-minus>
          </gui-package-minus>
          Remove dependency
        </gui-context-menu-item>
      </gui-context-menu-content>
    </gui-context-menu>
  </div>
</div>

`;

exports[`SideItem render as dependency 1`] = `

<div>
  <div class="group/side-item relative">
    <gui-context-menu>
      <gui-context-menu-trigger classname="relative w-full">
        <gui-card
          role="article"
          classname="group bg-background relative z-10 flex cursor-pointer flex-col rounded-lg shadow-none transition-colors hover:border hover:bg-neutral-100 hover:dark:bg-neutral-900"
        >
          <gui-card-header classname="relative flex w-full flex-row items-baseline gap-3 p-1 pr-2">
            <div class="flex items-center gap-2">
              <gui-data-badge
                variant="mono"
                classnames="[object Object]"
                content="^1.0.0"
              >
              </gui-data-badge>
            </div>
            <gui-tooltip-provider>
              <gui-tooltip delayduration="150">
                <gui-tooltip-trigger classname="w-full cursor-pointer items-baseline justify-between truncate overflow-hidden text-left text-sm font-medium">
                  item
                </gui-tooltip-trigger>
                <gui-tooltip-portal>
                  <gui-tooltip-content align="start">
                    item
                  </gui-tooltip-content>
                </gui-tooltip-portal>
              </gui-tooltip>
            </gui-tooltip-provider>
            <gui-tooltip-provider>
              <gui-tooltip delayduration="150">
                <gui-tooltip-trigger classname="font-courier text-muted-foreground w-full max-w-14 cursor-pointer truncate overflow-hidden text-right text-sm font-normal">
                  v1.0.0
                </gui-tooltip-trigger>
                <gui-tooltip-portal>
                  <gui-tooltip-content align="start">
                    v1.0.0
                  </gui-tooltip-content>
                </gui-tooltip-portal>
              </gui-tooltip>
            </gui-tooltip-provider>
            <div class="absolute inset-x-0 -bottom-3 px-2.5">
              <div class="relative flex w-full items-center justify-end">
                <div class="flex flex-wrap items-center gap-1">
                  <gui-relation-badge relation="peer">
                    peer
                  </gui-relation-badge>
                </div>
              </div>
            </div>
          </gui-card-header>
        </gui-card>
      </gui-context-menu-trigger>
      <gui-context-menu-content>
        <gui-context-menu-item disabled="true">
          <gui-package-minus>
          </gui-package-minus>
          Remove dependency
        </gui-context-menu-item>
      </gui-context-menu-content>
    </gui-context-menu>
  </div>
</div>

`;

exports[`SideItem render as dependency with long name 1`] = `

<div>
  <div class="group/side-item relative">
    <gui-context-menu>
      <gui-context-menu-trigger classname="relative w-full">
        <gui-card
          role="article"
          classname="group bg-background relative z-10 flex cursor-pointer flex-col rounded-lg shadow-none transition-colors hover:border hover:bg-neutral-100 hover:dark:bg-neutral-900"
        >
          <gui-card-header classname="relative flex w-full flex-row items-baseline gap-3 p-1 pr-2">
            <div class="flex items-center gap-2">
              <gui-data-badge
                variant="mono"
                classnames="[object Object]"
                content="^1.0.0"
              >
              </gui-data-badge>
            </div>
            <gui-tooltip-provider>
              <gui-tooltip delayduration="150">
                <gui-tooltip-trigger classname="w-full cursor-pointer items-baseline justify-between truncate overflow-hidden text-left text-sm font-medium">
                  lorem-ipsum-dolor-sit-amet-consectetur-adipiscing-elit-sed-do-eiusmod-tempor-incididunt-ut-labore-et-dolore-magna-aliqua-ut-enim-ad-minim-veniam-quis-nostrud-exercitation
                </gui-tooltip-trigger>
                <gui-tooltip-portal>
                  <gui-tooltip-content align="start">
                    lorem-ipsum-dolor-sit-amet-consectetur-adipiscing-elit-sed-do-eiusmod-tempor-incididunt-ut-labore-et-dolore-magna-aliqua-ut-enim-ad-minim-veniam-quis-nostrud-exercitation
                  </gui-tooltip-content>
                </gui-tooltip-portal>
              </gui-tooltip>
            </gui-tooltip-provider>
            <gui-tooltip-provider>
              <gui-tooltip delayduration="150">
                <gui-tooltip-trigger classname="font-courier text-muted-foreground w-full max-w-14 cursor-pointer truncate overflow-hidden text-right text-sm font-normal">
                  v1.0.0
                </gui-tooltip-trigger>
                <gui-tooltip-portal>
                  <gui-tooltip-content align="start">
                    v1.0.0
                  </gui-tooltip-content>
                </gui-tooltip-portal>
              </gui-tooltip>
            </gui-tooltip-provider>
            <div class="absolute inset-x-0 -bottom-3 px-2.5">
              <div class="relative flex w-full items-center justify-end">
                <div class="flex flex-wrap items-center gap-1">
                  <gui-relation-badge relation="peer">
                    peer
                  </gui-relation-badge>
                </div>
              </div>
            </div>
          </gui-card-header>
        </gui-card>
      </gui-context-menu-trigger>
      <gui-context-menu-content>
        <gui-context-menu-item disabled="true">
          <gui-package-minus>
          </gui-package-minus>
          Remove dependency
        </gui-context-menu-item>
      </gui-context-menu-content>
    </gui-context-menu>
  </div>
</div>

`;

exports[`SideItem render as dependent 1`] = `

<div>
  <div class="group/side-item relative">
    <gui-context-menu>
      <gui-context-menu-trigger classname="relative w-full">
        <gui-card
          role="article"
          classname="group bg-background relative z-10 flex cursor-pointer flex-col rounded-lg shadow-none transition-colors hover:border hover:bg-neutral-100 hover:dark:bg-neutral-900"
        >
          <gui-card-header classname="relative flex w-full flex-row items-baseline gap-3 p-1 pr-2">
            <div class="flex items-center gap-2">
              <gui-data-badge
                variant="mono"
                classnames="[object Object]"
                content="^1.0.0"
              >
              </gui-data-badge>
            </div>
            <gui-tooltip-provider>
              <gui-tooltip delayduration="150">
                <gui-tooltip-trigger classname="w-full cursor-pointer items-baseline justify-between truncate overflow-hidden text-left text-sm font-medium">
                  item
                </gui-tooltip-trigger>
                <gui-tooltip-portal>
                  <gui-tooltip-content align="start">
                    item
                  </gui-tooltip-content>
                </gui-tooltip-portal>
              </gui-tooltip>
            </gui-tooltip-provider>
            <gui-tooltip-provider>
              <gui-tooltip delayduration="150">
                <gui-tooltip-trigger classname="font-courier text-muted-foreground w-full max-w-14 cursor-pointer truncate overflow-hidden text-right text-sm font-normal">
                  v1.0.0
                </gui-tooltip-trigger>
                <gui-tooltip-portal>
                  <gui-tooltip-content align="start">
                    v1.0.0
                  </gui-tooltip-content>
                </gui-tooltip-portal>
              </gui-tooltip>
            </gui-tooltip-provider>
            <div class="absolute inset-x-0 -bottom-3 px-2.5">
              <div class="relative flex w-full items-center justify-end">
                <div class="flex flex-wrap items-center gap-1">
                  <gui-relation-badge relation="prod">
                    prod
                  </gui-relation-badge>
                </div>
              </div>
            </div>
          </gui-card-header>
        </gui-card>
      </gui-context-menu-trigger>
      <gui-context-menu-content>
        <gui-context-menu-item disabled="true">
          <gui-package-minus>
          </gui-package-minus>
          Remove dependency
        </gui-context-menu-item>
      </gui-context-menu-content>
    </gui-context-menu>
  </div>
</div>

`;

exports[`SideItem render as git dependency 1`] = `

<div>
  <div class="group/side-item relative">
    <gui-context-menu>
      <gui-context-menu-trigger classname="relative w-full">
        <gui-card
          role="article"
          classname="group bg-background relative z-10 flex cursor-pointer flex-col rounded-lg shadow-none transition-colors hover:border hover:bg-neutral-100 hover:dark:bg-neutral-900"
        >
          <gui-card-header classname="relative flex w-full flex-row items-baseline gap-3 p-1 pr-2">
            <div class="flex items-center gap-2">
              <gui-data-badge
                variant="mono"
                classnames="[object Object]"
                content="github:vltpkg/item"
              >
              </gui-data-badge>
            </div>
            <gui-tooltip-provider>
              <gui-tooltip delayduration="150">
                <gui-tooltip-trigger classname="w-full cursor-pointer items-baseline justify-between truncate overflow-hidden text-left text-sm font-medium">
                  item
                </gui-tooltip-trigger>
                <gui-tooltip-portal>
                  <gui-tooltip-content align="start">
                    item
                  </gui-tooltip-content>
                </gui-tooltip-portal>
              </gui-tooltip>
            </gui-tooltip-provider>
            <gui-tooltip-provider>
              <gui-tooltip delayduration="150">
                <gui-tooltip-trigger classname="font-courier text-muted-foreground w-full max-w-14 cursor-pointer truncate overflow-hidden text-right text-sm font-normal">
                  v1.0.0
                </gui-tooltip-trigger>
                <gui-tooltip-portal>
                  <gui-tooltip-content align="start">
                    v1.0.0
                  </gui-tooltip-content>
                </gui-tooltip-portal>
              </gui-tooltip>
            </gui-tooltip-provider>
            <div class="absolute inset-x-0 -bottom-3 px-2.5">
              <div class="relative flex w-full items-center justify-end">
                <div class="flex flex-wrap items-center gap-1">
                  <gui-relation-badge relation="prod">
                    prod
                  </gui-relation-badge>
                </div>
              </div>
            </div>
          </gui-card-header>
        </gui-card>
      </gui-context-menu-trigger>
      <gui-context-menu-content>
        <gui-context-menu-item disabled="true">
          <gui-package-minus>
          </gui-package-minus>
          Remove dependency
        </gui-context-menu-item>
      </gui-context-menu-content>
    </gui-context-menu>
  </div>
</div>

`;

exports[`SideItem render as multi-stacked dependent 1`] = `

<div>
  <div class="group/side-item relative">
    <gui-context-menu>
      <gui-context-menu-trigger classname="relative w-full">
        <gui-card
          role="article"
          classname="group bg-background relative z-10 flex cursor-pointer flex-col rounded-lg shadow-none transition-colors hover:border hover:bg-neutral-100 hover:dark:bg-neutral-900"
        >
          <gui-card-header classname="relative flex w-full flex-row items-baseline gap-3 p-1 pr-2">
            <div class="flex items-center gap-2">
              <gui-data-badge
                variant="mono"
                classnames="[object Object]"
                content="^1.0.0"
              >
              </gui-data-badge>
            </div>
            <gui-tooltip-provider>
              <gui-tooltip delayduration="150">
                <gui-tooltip-trigger classname="w-full cursor-pointer items-baseline justify-between truncate overflow-hidden text-left text-sm font-medium">
                  item
                </gui-tooltip-trigger>
                <gui-tooltip-portal>
                  <gui-tooltip-content align="start">
                    item
                  </gui-tooltip-content>
                </gui-tooltip-portal>
              </gui-tooltip>
            </gui-tooltip-provider>
            <gui-tooltip-provider>
              <gui-tooltip delayduration="150">
                <gui-tooltip-trigger classname="font-courier text-muted-foreground w-full max-w-14 cursor-pointer truncate overflow-hidden text-right text-sm font-normal">
                  v1.0.0
                </gui-tooltip-trigger>
                <gui-tooltip-portal>
                  <gui-tooltip-content align="start">
                    v1.0.0
                  </gui-tooltip-content>
                </gui-tooltip-portal>
              </gui-tooltip>
            </gui-tooltip-provider>
            <div class="absolute inset-x-0 -bottom-3 px-2.5">
              <div class="relative flex w-full items-center justify-end">
                <div class="relative flex h-[19px] w-fit cursor-pointer items-center justify-center rounded-full border border-gray-500 bg-gray-200 px-2 dark:border-gray-500 dark:bg-gray-950">
                  <span class="text-xs font-medium text-gray-600 dark:text-gray-400">
                    4 more
                  </span>
                </div>
                <div class="flex flex-wrap items-center gap-1">
                  <gui-relation-badge relation="prod">
                    prod
                  </gui-relation-badge>
                </div>
              </div>
            </div>
          </gui-card-header>
        </gui-card>
      </gui-context-menu-trigger>
      <gui-context-menu-content>
        <gui-context-menu-item disabled="true">
          <gui-package-minus>
          </gui-package-minus>
          Remove dependency
        </gui-context-menu-item>
      </gui-context-menu-content>
      <div class="bg-background absolute inset-x-1 top-[0.2rem] z-9 h-full rounded-lg border transition-colors duration-250 group-hover/side-item:bg-neutral-100/90 group-hover/side-item:dark:bg-neutral-950">
      </div>
      <div class="bg-background absolute inset-x-2 top-[0.4rem] z-8 h-full rounded-lg border transition-colors duration-250 group-hover/side-item:bg-neutral-100/80 group-hover/side-item:dark:bg-neutral-950/80">
      </div>
    </gui-context-menu>
  </div>
</div>

`;

exports[`SideItem render as parent 1`] = `

<div>
  <div class="group/side-item relative">
    <gui-context-menu>
      <gui-context-menu-trigger classname="relative w-full">
        <gui-card
          role="article"
          classname="group bg-background relative z-10 flex cursor-pointer flex-col rounded-lg shadow-none transition-colors border-muted hover:border hover:bg-neutral-100 hover:dark:bg-neutral-900"
        >
          <gui-card-header classname="relative flex w-full flex-row items-baseline gap-3 p-1 px-2">
            <div class="flex items-center gap-2">
              <gui-data-badge
                variant="mono"
                classnames="[object Object]"
                content="^1.0.0"
              >
              </gui-data-badge>
            </div>
            <gui-tooltip-provider>
              <gui-tooltip delayduration="150">
                <gui-tooltip-trigger classname="w-full cursor-pointer items-baseline justify-between truncate overflow-hidden text-left text-sm font-medium">
                  item
                </gui-tooltip-trigger>
                <gui-tooltip-portal>
                  <gui-tooltip-content align="start">
                    item
                  </gui-tooltip-content>
                </gui-tooltip-portal>
              </gui-tooltip>
            </gui-tooltip-provider>
            <gui-tooltip-provider>
              <gui-tooltip delayduration="150">
                <gui-tooltip-trigger classname="font-courier text-muted-foreground w-full max-w-14 cursor-pointer truncate overflow-hidden text-right text-sm font-normal">
                  v1.0.0
                </gui-tooltip-trigger>
                <gui-tooltip-portal>
                  <gui-tooltip-content align="start">
                    v1.0.0
                  </gui-tooltip-content>
                </gui-tooltip-portal>
              </gui-tooltip>
            </gui-tooltip-provider>
            <div class="absolute inset-x-0 -bottom-3 px-2.5">
              <div class="relative flex w-full items-center justify-end">
                <div class="flex flex-wrap items-center gap-1">
                  <gui-relation-badge relation="prod">
                    prod
                  </gui-relation-badge>
                </div>
              </div>
            </div>
          </gui-card-header>
        </gui-card>
        <gui-card classname="bg-secondary/50 mx-auto -mt-px w-[95%] cursor-pointer rounded-none rounded-b-xl border-t-0 px-3 py-1.5 shadow-none dark:bg-neutral-950">
          <div class="flex w-full items-baseline justify-between gap-2">
            <gui-tooltip-provider delayduration="150">
              <gui-tooltip>
                <gui-tooltip-trigger classname="grow cursor-pointer truncate overflow-hidden text-left text-xs font-medium">
                  item
                </gui-tooltip-trigger>
                <gui-tooltip-portal>
                  <gui-tooltip-content align="start">
                    item
                  </gui-tooltip-content>
                </gui-tooltip-portal>
              </gui-tooltip>
            </gui-tooltip-provider>
            <gui-tooltip-provider delayduration="150">
              <gui-tooltip>
                <gui-tooltip-trigger classname="font-courier text-muted-foreground w-full max-w-24 cursor-pointer truncate overflow-hidden text-right text-xs">
                  ^1.0.0
                </gui-tooltip-trigger>
                <gui-tooltip-portal>
                  <gui-tooltip-content align="end">
                    ^1.0.0
                  </gui-tooltip-content>
                </gui-tooltip-portal>
              </gui-tooltip>
            </gui-tooltip-provider>
          </div>
        </gui-card>
      </gui-context-menu-trigger>
      <gui-context-menu-content>
        <gui-context-menu-item disabled="true">
          <gui-package-minus>
          </gui-package-minus>
          Remove dependency
        </gui-context-menu-item>
      </gui-context-menu-content>
    </gui-context-menu>
  </div>
</div>

`;

exports[`SideItem render as two-stacked dependent 1`] = `

<div>
  <div class="group/side-item relative">
    <gui-context-menu>
      <gui-context-menu-trigger classname="relative w-full">
        <gui-card
          role="article"
          classname="group bg-background relative z-10 flex cursor-pointer flex-col rounded-lg shadow-none transition-colors hover:border hover:bg-neutral-100 hover:dark:bg-neutral-900"
        >
          <gui-card-header classname="relative flex w-full flex-row items-baseline gap-3 p-1 pr-2">
            <div class="flex items-center gap-2">
              <gui-data-badge
                variant="mono"
                classnames="[object Object]"
                content="^1.0.0"
              >
              </gui-data-badge>
            </div>
            <gui-tooltip-provider>
              <gui-tooltip delayduration="150">
                <gui-tooltip-trigger classname="w-full cursor-pointer items-baseline justify-between truncate overflow-hidden text-left text-sm font-medium">
                  item
                </gui-tooltip-trigger>
                <gui-tooltip-portal>
                  <gui-tooltip-content align="start">
                    item
                  </gui-tooltip-content>
                </gui-tooltip-portal>
              </gui-tooltip>
            </gui-tooltip-provider>
            <gui-tooltip-provider>
              <gui-tooltip delayduration="150">
                <gui-tooltip-trigger classname="font-courier text-muted-foreground w-full max-w-14 cursor-pointer truncate overflow-hidden text-right text-sm font-normal">
                  v1.0.0
                </gui-tooltip-trigger>
                <gui-tooltip-portal>
                  <gui-tooltip-content align="start">
                    v1.0.0
                  </gui-tooltip-content>
                </gui-tooltip-portal>
              </gui-tooltip>
            </gui-tooltip-provider>
            <div class="absolute inset-x-0 -bottom-3 px-2.5">
              <div class="relative flex w-full items-center justify-end">
                <div class="relative flex h-[19px] w-fit cursor-pointer items-center justify-center rounded-full border border-gray-500 bg-gray-200 px-2 dark:border-gray-500 dark:bg-gray-950">
                  <span class="text-xs font-medium text-gray-600 dark:text-gray-400">
                    1 more
                  </span>
                </div>
                <div class="flex flex-wrap items-center gap-1">
                  <gui-relation-badge relation="prod">
                    prod
                  </gui-relation-badge>
                </div>
              </div>
            </div>
          </gui-card-header>
        </gui-card>
      </gui-context-menu-trigger>
      <gui-context-menu-content>
        <gui-context-menu-item disabled="true">
          <gui-package-minus>
          </gui-package-minus>
          Remove dependency
        </gui-context-menu-item>
      </gui-context-menu-content>
      <div class="bg-background absolute inset-x-1 top-[0.2rem] z-9 h-full rounded-lg border transition-colors duration-250 group-hover/side-item:bg-neutral-100/90 group-hover/side-item:dark:bg-neutral-950">
      </div>
    </gui-context-menu>
  </div>
</div>

`;

exports[`SideItem render as workspace item 1`] = `

<div>
  <div class="group/side-item relative">
    <gui-context-menu>
      <gui-context-menu-trigger classname="relative w-full">
        <gui-card
          role="article"
          classname="group bg-background relative z-10 flex cursor-pointer flex-col rounded-lg shadow-none transition-colors hover:border hover:bg-neutral-100 hover:dark:bg-neutral-900"
        >
          <gui-card-header classname="relative flex w-full flex-row items-baseline gap-3 p-1 px-2">
            <gui-tooltip-provider>
              <gui-tooltip delayduration="150">
                <gui-tooltip-trigger classname="w-full cursor-pointer items-baseline justify-between truncate overflow-hidden text-left text-sm font-medium">
                  workspace-item
                </gui-tooltip-trigger>
                <gui-tooltip-portal>
                  <gui-tooltip-content align="start">
                    workspace-item
                  </gui-tooltip-content>
                </gui-tooltip-portal>
              </gui-tooltip>
            </gui-tooltip-provider>
            <gui-tooltip-provider>
              <gui-tooltip delayduration="150">
                <gui-tooltip-trigger classname="font-courier text-muted-foreground w-full max-w-14 cursor-pointer truncate overflow-hidden text-right text-sm font-normal">
                  v1.0.0
                </gui-tooltip-trigger>
                <gui-tooltip-portal>
                  <gui-tooltip-content align="start">
                    v1.0.0
                  </gui-tooltip-content>
                </gui-tooltip-portal>
              </gui-tooltip>
            </gui-tooltip-provider>
            <div class="absolute inset-x-0 -bottom-3 px-2.5">
              <div class="relative flex w-full items-center justify-end">
                <div class="flex flex-wrap items-center gap-1">
                  <gui-relation-badge relation="prod">
                    prod
                  </gui-relation-badge>
                </div>
              </div>
            </div>
          </gui-card-header>
        </gui-card>
      </gui-context-menu-trigger>
      <gui-context-menu-content>
        <gui-context-menu-item disabled="true">
          <gui-package-minus>
          </gui-package-minus>
          Remove dependency
        </gui-context-menu-item>
      </gui-context-menu-content>
    </gui-context-menu>
  </div>
</div>

`;
